# yahmp

./: .gitignore  README.md  pyproject.toml
assets/models/: g1_yahmp.onnx  g1_yahmp_future_mpc.onnx  g1_yahmp_mpc.onnx
assets/motions/: README.md
src/yahmp/: __init__.py  yahmp_env_cfg.py  yahmp_future_env_cfg.py  yahmp_locomotion_env_cfg.py  yahmp_student_env_cfg.py  yahmp_teacher_env_cfg.py
src/yahmp/config/g1/: __init__.py  env_cfgs.py  motion_data_cfg.yaml  rl_cfg.py
src/yahmp/mdp/: __init__.py  actions.py  commands.py  curriculum.py  events.py  observations.py  rewards.py  terminations.py
src/yahmp/mdp/motion/: README.md  __init__.py  base.py  debug_visualizer.py  future_joint_ref.py  hand_base.py  indexing.py  joint_ref.py  library.py  representations.py  sampling.py  teacher_student.py
src/yahmp/rl/: __init__.py  action_matching_ppo_algorithm.py  config.py  distillation_runner.py  exporter.py  imitation_RVQ_policy.py  imitation_runner.py  imitation_trainer.py  kl_matching_ppo_algorithm.py  locomotion_policy.py  motion_stats.py  policy.py  residual_vq.py  reward_logging.py  runner.py  student_teacher_policy.py
src/yahmp/scripts/: README.md  __init__.py
src/yahmp/scripts/data/: __init__.py  convert_pkl_dataset_to_npz.py  plot_reference_motion_joints.py  render_reference_motions.py
src/yahmp/scripts/deploy/: __init__.py  export_checkpoint_to_onnx.py  run_twist2_onnx_mujoco.py  run_yahmp_onnx_mujoco.py
src/yahmp/scripts/evaluation/: __init__.py  evaluate_twist2_onnx_success_parallel.py  tracking_eval_utils.py  (+2 more)
src/yahmp/utils/: __init__.py  wandb.py
(+1 files in other folders)
