[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "yahmp"
version = "0.1.0"
description = "Standalone YAHMP task package for mjlab."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Fabio Amadio" },
]
dependencies = [
  "mjlab==1.2.0",
  "onnxruntime-gpu>=1.24.3",
]

[project.scripts]
play = "yahmp.scripts.utils.play_checkpoint:main"

[project.entry-points."mjlab.tasks"]
yahmp = "yahmp"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.14",
]

[tool.ruff]
src = ["src"]
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
ignore = ["B011"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
